# fashion_trend_predictor

./: .gitignore  README.MD
data_collection/: Dockerfile  app.yaml  main.py  pyproject.toml  requirements.txt
data_collection/src/: app.py  main.py
data_source/: README.MD  app.yaml  main.py  pyproject.toml
data_source/src/: app.py
