[tool.poetry]
name = "data-collection"
version = "0.1.0"
description = ""
authors = ["mr-green1337 <islam.hachimi2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
quixstreams = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
